# gst-filtrito

./: .gitignore  README.md  meson.build
src/: gstfiltrito.c  gstfiltrito.cpp  gstfiltrito.h
